@@ -26,6 +26,7 @@ HEAD
 -bug: Bandwidth summation fails if NAN values are present
 -bug: Special Type Code 'host_id' available in Data Queries by Not Data Input Methods
 -bug: Dont generate error messages when creating non host based graphs
+-bug: wrong index used for Data Queries using VALUE/REGEXP
 
 0.8.7h
 -bug#0001403: Reapply Suggested Names does not work correctly for graphs and data sources not associated with Data Queries
